# deriv-interview-test

./: .env.example  .gitignore  CLAUDE.MD  Makefile  README.md  candidate_answers.json  conftest.py  kb.json  pyproject.toml  queries.json  requirements-dev.txt  run.py  validate.py
.claude/: CLAUDE.md  settings.json
docs/: plan.md
docs/adr/: 0001-record-architecture-decisions.md  0002-deterministic-tfidf-retrieval.md  0003-rule-checks-and-grounding.md  0004-single-llm-review-stage.md  0005-safety-first-aggregation.md  0006-reproducibility-sidecar.md  0007-n-variant-extensibility.md  0008-methodology-and-tooling.md  README.md
evalharness/: __init__.py  aggregate.py  checks.py  config.py  io_utils.py  llm_review.py  pipeline.py  report.py  retrieval.py  schema.py  taxonomy.py  textnorm.py
tests/: conftest.py  test_aggregate.py  test_checks.py  test_llm_review.py  test_retrieval.py  test_textnorm.py  test_validate.py
